--- a/proj2final/style.css
+++ b/proj2final/style.css
@@ -62,6 +62,8 @@ body {
   background: rgb(66, 66, 66);
   border-radius: 40%;
   transition: 0.2s ease-in-out all;
+  color: white;
+  /* font-size: 50px, */
 }
 .color-hover {
   position: absolute;
